# BaldBot

./: data.json  main.py  prefixes.json  pyproject.toml  youtube-5y3xh8gs24c-ORIGINAL_SONG_RIP_Excuse_My_Rudeness_But_Could_You_Please_RIP_-_Calliope_Mori.m4a  youtube-6ydgEipkUEU-Original_Rap_DEAD_BEATS_-_Calliope_Mori_holoMyth_hololiveEnglish.m4a  youtube-VNU2BDdgPZ8-Ibasho_Where_I_Belong_-_Calliope_Mori.webm  youtube-ZlXmQ6jNuzc-Calliope_Mori_-_RIP_Nhato_Remix.m4a  youtube-_kHjDNHEU5o-The_Wrecks_-_Favorite_Liar_Official_Video.webm  youtube-fpUv8BvVl0w-Gordon_Ramsay_Anime_Opening_My_War.m4a  youtube-gRGXGZw9wEE-Ja_senpai_ina_desu_ne.m4a  youtube-h-LOlueKCtk-Original_Song_Live_Again_-_Calliope_Mori_holoMyth_hololiveEnglish.m4a  youtube-h6elJiioKt4-Sex_Sells.webm  youtube-kO79NqaJDRs-_.m4a
